--- a/Front/package.json
+++ b/Front/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-data-grid": "^7.5.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "react-timer-hook": "^3.0.7",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
